force-app/main/default/objects/ProjectFinancing__c/ProjectFinancing__c.object-meta.xml
<CustomObject>
    <label>Projektfinanzierung</label>
    <nameField>
        <displayFormat>P-{YYYY}-{000000}</displayFormat>
        <label>Projektfinanzierung-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projektfinanzierungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>