force-app/main/default/objects/ProjectFinancing__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <label>Kreditnehmer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>