force-app/main/default/objects/ProjectFinancing__c/fields/ClearenceByActivumGrantedOn__c.field-meta.xml
<CustomField>
    <fullName>ClearenceByActivumGrantedOn__c</fullName>
    <label>Freigabe Activum erteilt am</label>
    <type>Date</type>
</CustomField>