force-app/main/default/objects/ProjectFinancing__c/fields/ClearenceByActivumRequestedOn__c.field-meta.xml
<CustomField>
    <fullName>ClearenceByActivumRequestedOn__c</fullName>
    <label>Freigabe Activum beantragt am</label>
    <type>Date</type>
</CustomField>