force-app/main/default/objects/ProjectFinancing__c/fields/ClearenceFinancingByActivum__c.field-meta.xml
<CustomField>
    <fullName>ClearenceFinancingByActivum__c</fullName>
    <label>Freigabe Finanzierung durch  Activum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nicht erforderlich</fullName>
                <default>true</default>
                <label>Nicht erforderlich</label>
            </value>
            <value>
                <fullName>Freigabe beantragt</fullName>
            </value>
            <value>
                <fullName>Freigegeben</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>