force-app/main/default/objects/ProjectFinancing__c/fields/Covenants__c.field-meta.xml
<CustomField>
    <fullName>Covenants__c</fullName>
    <label>Covenants / Besonderheiten</label>
    <type>TextArea</type>
</CustomField>