force-app/main/default/objects/ProjectFinancing__c/fields/CreditAgreementSignedOn__c.field-meta.xml
<CustomField>
    <fullName>CreditAgreementSignedOn__c</fullName>
    <label>Kreditvertrag unterzeichnet am</label>
    <type>Date</type>
</CustomField>