force-app/main/default/objects/ProjectFinancing__c/fields/CreditAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditAmount__c</fullName>
    <label>Darlehensvertragssumme</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>