force-app/main/default/objects/ProjectFinancing__c/fields/EinzusetzendesEigenkapital__c.field-meta.xml
<CustomField>
    <fullName>EinzusetzendesEigenkapital__c</fullName>
    <label>Einzusetzendes Eigenkapital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>