force-app/main/default/objects/ProjectFinancing__c/fields/EKEinsatz__c.field-meta.xml
<CustomField>
    <fullName>EKEinsatz__c</fullName>
    <label>EK Einsatz</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frontup</fullName>
            </value>
            <value>
                <fullName>Pro Rata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>