force-app/main/default/objects/ProjectFinancing__c/fields/EKEinsatzKommentar__c.field-meta.xml
<CustomField>
    <fullName>EKEinsatzKommentar__c</fullName>
    <label>EK Einsatz Kommentar</label>
    <type>TextArea</type>
</CustomField>