force-app/main/default/objects/ProjectFinancing__c/fields/FaelligkeitDritteMaBVRate__c.field-meta.xml
<CustomField>
    <fullName>FaelligkeitDritteMaBVRate__c</fullName>
    <label>Fälligkeit 3. MaBV Rate</label>
    <type>Date</type>
</CustomField>