force-app/main/default/objects/ProjectFinancing__c/fields/FirstPayoutOn__c.field-meta.xml
<CustomField>
    <fullName>FirstPayoutOn__c</fullName>
    <label>Erste Auszahlung am</label>
    <type>Date</type>
</CustomField>