force-app/main/default/objects/ProjectFinancing__c/fields/FundingStatus__c.field-meta.xml
<CustomField>
    <fullName>FundingStatus__c</fullName>
    <label>Finanzierungsstand</label>
    <type>TextArea</type>
</CustomField>