force-app/main/default/objects/ProjectFinancing__c/fields/Gesamtprojektkosten__c.field-meta.xml
<CustomField>
    <fullName>Gesamtprojektkosten__c</fullName>
    <label>Gesamtprojektkosten</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>