force-app/main/default/objects/ProjectFinancing__c/fields/GrundAbsage__c.field-meta.xml
<CustomField>
    <fullName>GrundAbsage__c</fullName>
    <label>Grund Absage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>