force-app/main/default/objects/ProjectFinancing__c/fields/InterestModalities__c.field-meta.xml
<CustomField>
    <fullName>InterestModalities__c</fullName>
    <label>Zinsmodalitäten</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fix</fullName>
            </value>
            <value>
                <fullName>Variabel</fullName>
                <default>true</default>
                <label>Variabel</label>
            </value>
            <value>
                <fullName>Fix + Variabel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>