force-app/main/default/objects/ProjectFinancing__c/fields/InterestRate__c.field-meta.xml
<CustomField>
    <fullName>InterestRate__c</fullName>
    <label>Zinssatz</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>