force-app/main/default/objects/ProjectFinancing__c/fields/InterestRateFixedInterestRate__c.field-meta.xml
<CustomField>
    <fullName>InterestRateFixedInterestRate__c</fullName>
    <label>Zinssatz / Zinsbindung</label>
    <type>TextArea</type>
</CustomField>