force-app/main/default/objects/ProjectFinancing__c/fields/InterestRateFixedUntil__c.field-meta.xml
<CustomField>
    <fullName>InterestRateFixedUntil__c</fullName>
    <label>Zinsbindung bis</label>
    <type>Date</type>
</CustomField>