force-app/main/default/objects/ProjectFinancing__c/fields/LandChargesRegisteredAppliedFor__c.field-meta.xml
<CustomField>
    <fullName>LandChargesRegisteredAppliedFor__c</fullName>
    <label>Eingetragene / beantragte Grundschulden</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>