force-app/main/default/objects/ProjectFinancing__c/fields/LTC__c.field-meta.xml
<CustomField>
    <fullName>LTC__c</fullName>
    <formula>CreditAmount__c / Gesamtprojektkosten__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>