force-app/main/default/objects/ProjectFinancing__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Marge</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>