force-app/main/default/objects/ProjectFinancing__c/fields/Payout__c.field-meta.xml
<CustomField>
    <fullName>Payout__c</fullName>
    <label>Auszahlung</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>