force-app/main/default/objects/ProjectFinancing__c/fields/PayoutOn__c.field-meta.xml
<CustomField>
    <fullName>PayoutOn__c</fullName>
    <label>Auszahlung am</label>
    <type>Date</type>
</CustomField>