force-app/main/default/objects/ProjectFinancing__c/fields/ProjectFinancier__c.field-meta.xml
<CustomField>
    <fullName>ProjectFinancier__c</fullName>
    <label>Projektfinanzierer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Projektfinanzierer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projektfinanzierungen</relationshipLabel>
    <relationshipName>ProjectFinancings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>