force-app/main/default/objects/ProjectFinancing__c/fields/ProjektkalkulationVom__c.field-meta.xml
<CustomField>
    <fullName>ProjektkalkulationVom__c</fullName>
    <label>Projektkalkulation vom</label>
    <type>Date</type>
</CustomField>