force-app/main/default/objects/ProjectFinancing__c/fields/ReferenceInterestRate__c.field-meta.xml
<CustomField>
    <fullName>ReferenceInterestRate__c</fullName>
    <label>Referenzzinssatz</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-M-EURIBOR</fullName>
            </value>
            <value>
                <fullName>3-M-EURIBOR</fullName>
                <default>true</default>
                <label>3-M-EURIBOR</label>
            </value>
            <value>
                <fullName>6-M-EURIBOR</fullName>
            </value>
            <value>
                <fullName>12-M-EURIBOR</fullName>
            </value>
            <value>
                <fullName>Sonstige</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>