force-app/main/default/objects/ProjectFinancing__c/fields/ReferenceInterestRateComment__c.field-meta.xml
<CustomField>
    <fullName>ReferenceInterestRateComment__c</fullName>
    <label>Referenzzinssatz Kommentar</label>
    <type>TextArea</type>
</CustomField>