force-app/main/default/objects/ProjectFinancing__c/fields/RepaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>RepaymentTerm__c</fullName>
    <label>Laufzeit Tilgung</label>
    <type>TextArea</type>
</CustomField>