force-app/main/default/objects/ProjectFinancing__c/fields/RepaymentUntil__c.field-meta.xml
<CustomField>
    <fullName>RepaymentUntil__c</fullName>
    <label>Laufzeit Darlehen bis</label>
    <type>Date</type>
</CustomField>