force-app/main/default/objects/ProjectFinancing__c/fields/RepaymentUntilComment__c.field-meta.xml
<CustomField>
    <fullName>RepaymentUntilComment__c</fullName>
    <label>Laufzeit Tilgung Kommentar</label>
    <type>TextArea</type>
</CustomField>