force-app/main/default/objects/ProjectFinancing__c/fields/Rueckfuehrungsbedingungen__c.field-meta.xml
<CustomField>
    <fullName>Rueckfuehrungsbedingungen__c</fullName>
    <label>Rückführungsbedingungen</label>
    <type>TextArea</type>
</CustomField>