force-app/main/default/objects/ProjectFinancing__c/fields/Securities__c.field-meta.xml
<CustomField>
    <fullName>Securities__c</fullName>
    <label>Sicherheiten</label>
    <type>TextArea</type>
</CustomField>