force-app/main/default/objects/ProjectFinancing__c/fields/SecuritiesComment__c.field-meta.xml
<CustomField>
    <fullName>SecuritiesComment__c</fullName>
    <label>Sicherheiten Kommentar</label>
    <type>TextArea</type>
</CustomField>