force-app/main/default/objects/ProjectFinancing__c/fields/Stukturierungsentgeld__c.field-meta.xml
<CustomField>
    <fullName>Stukturierungsentgeld__c</fullName>
    <label>Stukturierungsentgeld</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>