force-app/main/default/objects/ProjectFinancing__c/fields/TermsheetSignedOn__c.field-meta.xml
<CustomField>
    <fullName>TermsheetSignedOn__c</fullName>
    <label>Termsheet unterzeichnet am</label>
    <type>Date</type>
</CustomField>