force-app/main/default/objects/ProjectFinancing__c/fields/Valuta__c.field-meta.xml
<CustomField>
    <fullName>Valuta__c</fullName>
    <label>Valuta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>